2007-08-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/Magick.xs: Add support for "native" endian parameter
	in PerlMagick.
	* magick/command.c: Utilities now understand "native" as an
	argument to -endian.
	* magick/image.h (enum EndianType): Added NativeEndian enum value.
	* configure.ac: Test libtiff for TIFFSwabArrayOfTriples().
	* magick/constitute.c (ExportImagePixelArea): Support export in
	little, big, and native endian.
	(ImportImagePixelArea): Support import in little, big, and native
	endian.

2007-08-23  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c (WriteMATLABImage): MAT writer uses
	ExportImagePixelArea() now.  Fix issues noticed by valgrind.

2007-08-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pnm.c (WritePNMImage): Use '-quality 0' rather than
	'-compress none' to select the PNM ASCII subformats.  This change
	is made based on the principle of least surprise.
	* magick/constitute.c (ExportImagePixelArea): Add a GrayQuantum
	implementation for exporting from two color PsuedoClass.
	* coders/pnm.c (WritePNMImage): Use GetImageCharacteristics() and
	ExportImagePixelArea() in implementation.

2007-08-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (ExportImagePixelArea): Performance
	improvements.
	(ImportImagePixelArea): Performance improvements.

2007-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (IdentifyImageCommand): If "%r" is present in
	-format specifier, then read whole image.
	* magick/utility.c (TranslateTextEx): Undocumented "%r"
	substitution now returns a string based on GetImageType() rather
	than a concatentation of image class and "Matte".
	* coders/tiff.c (WriteTIFFImage): Use GetImageCharacteristics().
	* magick/image.c (GetImageCharacteristics): New function to
	evaluate the basic characteristics of the image.
	(GetImageType): Use GetImageCharacteristics().

2007-08-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
