@@ -2017,6 +2017,7 @@ MagickExport void *MapBlob(int file,const MapMode mode,magick_off_t offset,
     {
       map=(void *) mmap((char *) NULL,length,PROT_READ,MAP_PRIVATE,file,
         (off_t)offset);
+#if 0
 #if defined(HAVE_MADVISE)
       if (map != (void *) MAP_FAILED)
         {
@@ -2031,6 +2032,7 @@ MagickExport void *MapBlob(int file,const MapMode mode,magick_off_t offset,
 #endif /* defined(MADV_WILLNEED) */
         }
 #endif /* defined(HAVE_MADVISE) */
+#endif
       break;
     }
     case WriteMode:
