@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2007-08-26  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/constitute.c: Re-wrote Export/Import Float/Double macros
+        because they did not actually work right, and to eliminate the
+        performance penalty for native order.
+
+</UL>
+<p>
 2007-08-25  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
